--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -4,8 +4,10 @@
     android:layout_height="150dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    app:cardCornerRadius="17dp"
     android:layout_margin="16dp"
     android:orientation="vertical"
+    android:background="@color/white"
     android:id="@+id/food_cardview">
 
 <androidx.constraintlayout.widget.ConstraintLayout
