--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple_100">#DEC7FB</color>
-    <color name="food_color_200">#0C0C24</color>
+    <color name="food_color_200">#2d2d44</color>
     <color name="food_color_100">#FFDA6C</color>
 </resources>
